# MBR-sim

./: .gitignore  LICENSE  README.md  data.csv  expectations.txt  licensing.md  pyproject.toml  todo.txt
csvs/: ResNet50.csv  ResNet50_out.csv  faster_rcnn_out.csv  resnet34ssd_out.csv  ssd_mobilenet_v2_out.csv  vgg_ssd_300.csv  vgg_ssd_300_out.csv  yolov3_out.csv
src/: fusion.py  mapper.py  mbr-sim.py  simulate.py  util.py  visual.py
src/MBR_sim/: csv_unlooper.py  fusion.py  mapper.py  mbr-sim.py  simulate.py  util.py  visual.py
src/MBR_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/MBR_sim/configs/: hw_config1.cfg  tpu.cfg
src/MBR_sim/workloads/csv/: MobileNet-Base.csv  MobileNet-Large.csv  ResNet50.csv  bert-base.csv  bert-large.csv  bert-large_unlooped.csv  bert-small.csv  bert_large.csv  bert_large_unlooped.csv  ssd_mobilenet_v2.csv
workloads/csv/: faster_rcnn.csv  resnet34ssd.csv  yolov3.csv
